# routes/web.php
@@ -33,12 +33,11 @@ $router->post('/subscribe-to-chatbot', '\App\Api\V1\Controllers\SubscriptionCont
 $router->post('/webhook', '\App\Api\V1\Controllers\WebhookController@handleWebhook');
 
 
-
 $router->get('/auth/twitter', '\App\Api\V1\Controllers\TwitterAuthController@getOAuthToken');
 $router->get('/twitter', '\App\Api\V1\Controllers\TwitterAuthController@getRequestToken');
 $router->get('/callback', '\App\Api\V1\Controllers\TwitterAuthController@handleCallback');
 $router->get('/twitter-auth', '\App\Api\V1\Controllers\TwitterAuthController@getOAuthToken');
 $router->get('/initiate-twitter-auth', '\App\Api\V1\Controllers\TwitterAuthController@redirectToTwitterAuth');
-$router->post('/send-direct-message/{userId}', '\App\Api\V1\Controllers\MessageController@sendDirectMessage');
+$router->post('/send-direct-message', '\App\Api\V1\Controllers\MessageController@sendDirectMessageToSubscribers');
 
 
